<resources>
    <string name="app_name">CutoutsCreator</string>
    <string name="bg_color">Background color</string>
    <string name="sq_color">Square color</string>
    <string name="sq_size">Square size</string>
    <string name="p_count">Point count</string>
    <string name="f_count">File count</string>
    <string name="i_q">Image quality</string>
    <string name="s_t">Save to</string>
    <string name="create">Create</string>
    <string name="preview">Preview</string>
</resources>
